fix: [CDNG-3513]: Card label changes for k8 and GCP connectors (#1059)
* fix: [CDNG-3513]: Card label changes for k8 and GCP connectors

* fix: [CDNG-3513]: Making text truncation in listing as relative

--- a/src/modules/50-connectors/pages/connectors/views/ConnectorsListView.module.scss
+++ b/src/modules/50-connectors/pages/connectors/views/ConnectorsListView.module.scss
@@ -36,9 +36,6 @@
   }
 }
 
-.summaryLabel {
-  max-width: 300px;
-}
 .viewDetails {
   cursor: pointer;
 }
